2004-05-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/result.hxx, src/util.cxx:
  - Workarounds for the infamous non-release "gcc 2.96", thanks Arjen Baart
 libpqxx.spec.in:
  - Added --enable-shared (Arjen Baart)
2004-05-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Strip newlines off COPY TO STDOUT lines in old-libpq code
 src/tablereader.cxx:
  - Fix parse error when line ends in empty field.  Thanks slava@perlx.com!
2004-05-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx, src/pipeline.cxx:
  - Made prepended "SELECT 0" query explicit to pave way for partial retrieval
  - Syntax error reporting tries to narrow down problematic query
 include/pqxx/tablestream.hxx:
  - Made columnlist() use new separated_list()
 include/pqxx/util.hxx:
  - New class template items<> to make container initialization easy
  - separated_list() generates comma/semicolon/...-separated lists
 src/transaction_base.cxx:
  - No longer go async in BeginCopyWrite()
 test/test008.cxx, test/test010.cxx:
  - Use separated_list() instead of output loop
 test/test010.cxx, test/test080.cxx:
  - Use items<> instead of hand-filling containers
2004-05-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx, src/result.cxx:
  - Added errorposition()
 README:
  - Added KPoGre to list of libpqxx-based projects
2004-05-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/all.h:
  - Added transactionitf.h, thanks Bart Samwel
  - Which doesn't mean that these files aren't still deprecated, of course...
2004-05-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablewriter.hxx:
  - Complete test coverage
 include/pqxx/util.hxx, src/robusttransaction.cxx, src/util.cxx, test/test018.cxx,
 test/test045.cxx:
  - Added sqlesc() functions
  - Deprecated Quote() functions
 src/connection_base.cxx:
  - Removed unnecessary PGSTD:: scope qualifiers
  - Added some missing quotes in LISTEN/UNLISTEN statements